<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="serving_mode">Serving Mode</string>
    <string name="in_stock">In</string>
    <string name="out_of_stock">Out</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for trucks</string>
    <string name="title_vendor_settings">Settings</string>
    <string name="title_sign_in">Log in</string>
    <string name="title_facebook_login">Log in with Facebook</string>
    <string name="title_menu_item_diff_notification">Menu availability error</string>
    <string name="saving_menu_availability">Saving menu item availability</string>
    <string name="setting_item_unavailable_warning">setting_item_unavailable_warning</string>
    <string name="setting_item_unavailable_warning_title">Item unavailable warning</string>
    <string name="setting_item_unavailable_warning_summary">Show when entering serving mode</string>
    <string name="dont_show_again">Don\'t show this message again</string>
    <string name="title_items_unavailable">Menu items unavailable</string>
    <string name="items_unavailable_positive_button">View menu</string>
    <string name="items_unavailable_negative_button">Ignore</string>

    <string name="menu_item_tag_gluten">Gluten free</string>
    <string name="menu_item_tag_vegetarian">Vegetarian</string>
    <string name="menu_item_tag_vegan">Vegan</string>
    <string name="menu_item_tag_peanuts">Contains peanuts</string>
    <string name="menu_item_tag_raw">Served raw</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_vendor_mode">Vendor mode</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_menu">Edit menu</string>

    <!-- Accessibility -->
    <string name="access_vendor_marker_description">Your truck location</string>

    <!-- AppRate -->
    <string name="app_rate_prompt">How are we doing? Drop us a line!</string>
    <string name="app_rate_rate_us">Rate it</string>
    <string name="app_rate_later">Later</string>
    <string name="app_rate_never">Never</string>

    <!-- Errors -->
    <string name="error_network">Oops, something went wrong. Please check your network connection and try again.</string>
    <string name="error_empty_vendor_menu">It looks like you have not yet added any menu items using the web interface. On Android you can only mark them as being in or out of stock.\n\nVisit the website at https://www.truckmuncher.com</string>
    <string name="error_twitter_auth">Twitter authentication failed. Please try again.</string>
    <string name="error_facebook_auth">Facebook authentication failed. Please try again.</string>
    <string name="error_menu_item_diff">We could not save your menu availability. Try again.</string>
    <string name="error_invalid_truck">Invalid truck</string>
    <string name="error_serving_no_location">We don\'t know where you are yet. Wait for GPS or use the map to set you location.</string>
    <string name="error_no_serving_trucks">No trucks are serving right now</string>
    <string name="all_trucks">All trucks</string>

    <string name="nav_common_live_map">Live Map</string>
    <string name="nav_common_all_trucks">All Trucks</string>
    <string name="nav_auth_log_out">Log out</string>
    <string name="nav_vendor_my_trucks">My Trucks</string>
    <string name="nav_unauth_log_in">Log in</string>
    <string name="tab_all_trucks">ALL</string>
    <string name="tab_favorite_trucks">FAVORITES</string>

    <!-- Plurals-->
    <plurals name="items_unavailable_message">
        <item quantity="one">You have %s menu item marked as unavailable. Would you like to double check your menu to review the items?</item>
        <item quantity="other">You have %s menu items marked as unavailable. Would you like to double check your menu to review the items?</item>
    </plurals>

    <string-array name="navigation_common">
        <item>Live Map</item>
        <item>All Trucks</item>
    </string-array>

    <string-array name="navigation_authenticated">
        <item>Log out</item>
    </string-array>

    <string-array name="navigation_vendor">
        <item>My Trucks</item>
    </string-array>

    <string-array name="navigation_unauthenticated">
        <item>Log in</item>
    </string-array>
</resources>
