<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dar_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pink"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:text="@string/app_rate_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/app_rate_never"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_rate_never"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/dar_close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_rate_later"
            android:textColor="@android:color/white" />

        <!-- The id has been set to dar_rate_element to get the lib behavior -->
        <Button
            android:id="@+id/dar_rate_element"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_rate_rate_us"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>